# terman

./: .gitignore  Cargo.toml  README.md
crates/common/: Cargo.toml
crates/common/i18n/: en-US.ftl  en-US.htop.ftl  en-US.screen.ftl  en-US.tmux.ftl  zh-CN.ftl  zh-CN.htop.ftl  zh-CN.screen.ftl  zh-CN.tmux.ftl
crates/common/src/: command.rs  display_width.rs  i18n.rs  lib.rs  shell.rs  terminal_mouse.rs  terminal_search.rs  terminal_size.rs
crates/common/src/i18n/: htop.rs  htop_view.rs  key.rs  render.rs  screen.rs  tmux.rs  tmux_status.rs
crates/htop/: Cargo.toml
crates/htop/src/: app.rs  app_events.rs  app_input.rs  app_mouse_action.rs  app_poll.rs  app_terminal.rs  app_tree_input.rs  body_layout.rs  cli.rs  command_display.rs  core_meter.rs  di.rs  environment_view.rs  footer.rs  format.rs  help.rs  interrupt.rs  io_view.rs  lib.rs  main.rs  meter.rs  metrics.rs  model.rs  mouse.rs  mouse_context.rs  mouse_rows.rs  mouse_selection.rs  mouse_signal.rs  network.rs  network_view.rs  overview_layout.rs  overview_view.rs  process_detail.rs  process_priority.rs  process_rows.rs  process_status.rs  process_table.rs  process_tree.rs  processes_view.rs  render.rs  (+7 more)
crates/screen/: Cargo.toml
crates/screen/src/: blanker.rs  builtin.rs  builtin_buffer.rs  builtin_control.rs  builtin_input.rs  builtin_mouse.rs  builtin_output.rs  builtin_runtime.rs  cli.rs  confirmation.rs  copy_history.rs  copy_mode.rs  copy_search.rs  di.rs  display_width.rs  ipc.rs  launcher.rs  lib.rs  main.rs  mouse_window_list.rs  pty.rs  pty_process.rs  region_types.rs  screen_exchange.rs  server.rs  server_control.rs  server_manifest.rs  service.rs  session_core.rs  sessions.rs  shell.rs  system.rs  terminal_input.rs  terminal_input_tests.rs  terminal_key.rs  terminal_mouse.rs  terminal_prompt.rs  window_list_input.rs  window_runtime.rs
crates/screen/src/ipc/: endpoint.rs
crates/screen/src/server_control/: support.rs
crates/screen/src/service/: attach.rs  attach_actions.rs  attach_buffer.rs  attach_command.rs  attach_copy.rs  attach_hardcopy.rs  attach_mouse.rs  attach_number.rs  attach_output.rs  attach_prompt.rs  attach_select.rs  attach_size.rs  attach_termcap.rs  attach_title.rs  client.rs  control.rs  control_at.rs  control_buffer.rs  control_buffer_encoding.rs  control_chdir.rs  control_colon.rs  control_displays.rs  control_env.rs  control_hardcopy.rs  control_hardcopy_support.rs  control_help.rs  control_info.rs  control_license.rs  control_local.rs  control_log.rs  control_monitor.rs  control_number.rs  control_parse.rs  control_region_resize.rs  control_register.rs  control_scrollback.rs  control_select.rs  control_session.rs  control_shell.rs  control_silence.rs  (+16 more)
crates/screen/src/session_core/: config.rs  events.rs  log_control.rs  logging.rs  monitor.rs  region_bus.rs  region_geometry.rs  region_layout.rs  region_render.rs  region_resize.rs  registers.rs  replay.rs  silence.rs  state.rs  status.rs  tests.rs  window.rs  wrap.rs
crates/screen/src/sessions/: manifest.rs  (+4 more)
crates/tmux/: Cargo.toml
crates/tmux/src/: args.rs  attach.rs  attach_command_exec.rs  attach_command_prompt.rs  attach_copy.rs  attach_find.rs  attach_input.rs  attach_keys.rs  attach_kill.rs  attach_mouse.rs  attach_pane.rs  attach_pane_chooser.rs  attach_prompt.rs  attach_raw_mode.rs  attach_rename.rs  attach_repeat.rs  attach_status.rs  attach_window.rs  attach_window_list.rs  buffer_args.rs  buffer_commands.rs  builtin.rs  capture.rs  cli.rs  clients.rs  command.rs  copy_mode.rs  detach_client.rs  di.rs  display_width.rs  hints.rs  history.rs  ipc.rs  launcher.rs  lib.rs  lifecycle.rs  main.rs  message.rs  new_session.rs  pane_commands.rs  (+40 more)
(+16 files in other folders)
