[workspace]
members = [
    "crates/screen",
    "crates/tmux",
    "crates/common",
]
resolver = "2"

[workspace.dependencies]
fluent-bundle = "0.16.0"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sys-locale = "0.3.2"
sysinfo = "0.39.5"
terman-common = { path = "crates/common" }
tokio = { version = "1.52.3", features = ["macros", "process", "rt", "time"] }
unic-langid = "0.9.6"
which = "8.0.4"
