[package]
name = "terman-common"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { workspace = true }
fluent-bundle = { workspace = true }
sys-locale = { workspace = true }
tokio = { workspace = true }
unic-langid = { workspace = true }
which = { workspace = true }
unicode-width = { workspace = true }
