[package]
name = "terman-htop"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
crossterm = { workspace = true }
netstat2 = { workspace = true }
ratatui = { workspace = true }
sysinfo = { workspace = true }
terman-common = { workspace = true }
tokio = { workspace = true }
