[package]
name = "terman-screen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
directories = { workspace = true }
encoding_rs = { workspace = true }
fluxdi = { workspace = true }
interprocess = { workspace = true }
portable-pty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
terman-common = { workspace = true }
tokio = { workspace = true }
unicode-width = { workspace = true }
