[package]
name = "terman-tmux"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
crossterm = { workspace = true }
directories = { workspace = true }
fluxdi = { workspace = true }
interprocess = { workspace = true }
portable-pty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terman-common = { workspace = true }
tokio = { workspace = true }
unicode-width = { workspace = true }
vt100 = { workspace = true }
